--- a/ansible/playbooks/roles/consul/templates/consul.json.j2
+++ b/ansible/playbooks/roles/consul/templates/consul.json.j2
@@ -4,7 +4,7 @@
     {% endif %}
     "server": true,
     "node_name": "{{ inventory_hostname }}",
-    "datacenter": "echin",
+    "datacenter": "dc1",
     "data_dir": "{{ consul_data_dir }}",
     "bind_addr":"0.0.0.0",
     "advertise_addr": "{{ ansible_eth1.ipv4.address }}",
